force-app/main/default/objects/Contact/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountName</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>