force-app/main/default/objects/Contact/fields/Company_email__c.field-meta.xml
<CustomField>
    <fullName>Company_email__c</fullName>
    <label>Company_email</label>
    <type>Url</type>
</CustomField>