force-app/main/default/objects/Contact/recordTypes/CRT1.recordType-meta.xml
<RecordType>
    <fullName>CRT1</fullName>
    <active>true</active>
    <label>CRT1</label>
</RecordType>