force-app/main/default/objects/Contact/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName ) || ISBLANK( LastName )</errorConditionFormula>
    <errorMessage>Both First Name and Last Name must not be blank.</errorMessage>
</ValidationRule>